--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -5,19 +5,22 @@
     <title>AHS Capstone Final Exhibit</title>
     <meta name="description" content="Hello, WebVR! • A-Frame">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
+    <!-- <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script> -->
     <script src="js/setup.js"></script>
   </head>
   <body>
-    <a-scene outline="thickness: 0.01;" background="color: #FAFAFA">
-        <a-camera position ="0 0.2 -2">
-            <a-cursor></a-cursor>
-            <!-- Or <a-entity cursor></a-entity> -->
-        </a-camera>
-      <a-box prox text-appear outline id="box" text="value: hi; zOffset: 0.55; anchor: center; align: center" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow>
-      </a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+    <a-scene physics="debug: true" background="color: #FAFAFA">
+      <a-entity gltf-model="assets/DH.gltf" nav-mesh></a-entity>
+      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.3">
+        <a-camera position ="0 20 -2" look-controls="pointerLockEnabled: true">
+          <a-cursor></a-cursor>
+       </a-camera>
+      </a-entity>
+      <a-box dynamic-body prox="dist: 1.3; message: check out my project!" text-appear id="box" text="font: exo2bold; zOffset: 0.55; anchor: center; align: center" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+      <a-sphere static-body position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-cylinder dynamic-body position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+      <a-plane static-body text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
     </a-scene>
   </body>
   <script src="js/main.js"></script>
