Adding basic project panel layout.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,7 @@
                     <div class="Project__wrapper">
                         <div class="Project__title">
                             <h2>{{page.title}} - {{page.author}}</h2>
+                            <div class="Project__button">_</div>
                         </div>
                         <div class="Project__description">
                             {{page.description}}
