--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,14 +21,13 @@
                         </div>
                         <div class="Project__description">
                             {{project.description}}
+                            {% if project.type == 'page' %}
+                                {% assign proj_href = '/projects/' | append: project.hyperlink %}
+                            {% else %}
+                                {% assign proj_href = project.hyperlink %}
+                            {% endif %}
+                            <a class="Project__link" href={{proj_href}}>Read More</a>
                         </div>
-                        {% if project.type == 'page' %}
-                            {% assign proj_href = '/projects/' | append: project.hyperlink %}
-                        {% else %}
-                            {% assign proj_href = project.hyperlink %}
-                        {% endif %}
-                        <a href={{proj_href}}>Read More</a>
-
                     </div>
                 {% endfor %}
             </div>
