Adding relative_url

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="/assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/main.css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
         <title>{{page.title}} - {{site.title}}</title>
     </head>
@@ -29,7 +29,9 @@
                     <div class={{wrapper_class}}>
                         <div class="Project__title">
                             <h2>{{project.title}} - {{project.author}}</h2>
-                            <div class="Project__button">_</div>
+                            <div class="Project__button">
+                                <img class="Project__spiral" src="assets/spiral.png" />
+                            </div>
                         </div>
                         <div class="Project__content">
                             <img src={{project.img}} class="Project__img" />
