Finalizing responsive CSS and add site description.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <div class="Page__wrapper">
             <div class="Header__wrapper">
                 <div class="Header__inner">
-                    <h1 class="Header__title">AHS Capstone</h1>
+                    <h1 class="Header__title">{{site.title}}</h1>
                     <div class="Header__image-row">
                         <img class="Header__image" src={{'assets/header-icon-04.png' | relative_url}} />
                         <img class="Header__image" src={{'assets/header-icon-05.png' | relative_url}} />
