--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,8 +52,7 @@ h1 {
 }
 
 .Header__wrapper {
-    height: 100px;
-    margin: 20px 0;
+    margin: 20px 0 0;
 }
 
 .Header__image {
@@ -70,6 +69,11 @@ h1 {
 
 .Header__title {
     display: inline-block;
+}
+
+.Home__description {
+    max-width: 700px;
+    margin: 0 15px 100px;
 }
 
 .Content__wrapper {
@@ -104,7 +108,6 @@ h1 {
 }
 
 .Project__title {
-    height: 25px;
     padding: 10px;
     padding-right: 55px;
     position: relative;
@@ -123,9 +126,13 @@ h1 {
     flex-direction: column;
 }
 
+.Project__img {
+    max-width: 100%;
+}
+
 .Project__button {
     border-left: 1px solid black;
-    height: 45px;
+    height: 100%;
     position: absolute;
     top: 0;
     right: 0;
@@ -156,27 +163,43 @@ h1 {
     margin: 0 auto;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     h1 {
-        font-size: 76px;
+        font-size: 70px;
     }
     
     .Header__inner {
         flex-direction: column;
         align-items: flex-start;
         margin: 0 10px;
+        text-align: center;
     }
 
     .Header__wrapper {
         height: auto;
     }
 
+    .Home__description {
+        margin: 0;
+    }
+
+    .Project__wrapper__left {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+
+    .Project__wrapper__right {
+        max-width: 100%;
+        margin: 0;
+    }
+
     .Project__content {
         flex-direction: column;
     }
 
-    .Project__description {
-        flex-direction: row;
+    .Project__link {
+        margin: 10px 0;
+        height: 25px;
     }
 }
 
