--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
         <div class="Page__wrapper">
             <div class="Header__wrapper">
                 <div class="Header__inner">
-                    <h1 class="Header__title">{{site.title}}</h1>
+                    <a href={{'/' | relative_url}}>
+                        <h1 class="Header__title">{{site.title}}</h1>
+                    </a>
                     <div class="Header__image-row">
                         <img class="Header__image" src={{'assets/header-icon-04.png' | relative_url}} />
                         <img class="Header__image" src={{'assets/header-icon-05.png' | relative_url}} />
@@ -23,4 +25,5 @@
             </div>
         </div>
     </body>
+    <script src={{'/js/comment.js' | relative_url}} ></script>
 </html>
