--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-
 <div class="Page__content-inner">
-    <h1>{{page.title}}</h1>
-    <h2>{{page.author}}</h2>
+    <div class="Page__header">
+        <h2>{{page.title}}</h2>
+        <h3>{{page.author}}</h3>    
+    </div>
     {{content}}
 </div>
