--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <link rel="icon" href={{'favicon.ico' | relative_url }} type="image/x-icon"/>
         <link rel="stylesheet" href={{'/assets/css/main.css' | relative_url}} />
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
         <title>{{page.title}} - {{site.title}}</title>
