Adding new CSS structure for layouts.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="Project__wrapper__left">
     <div class="Page__intro">
         {{content}}
-        <a class="Exhibit__link" href={{site.exhibitlink}} target="_blank">ENTER VIRTUAL EXHIBIT</a>
+        <a class="Exhibit__link" href={{'exhibit' | relative_url}}>ENTER VIRTUAL EXHIBIT</a>
     </div>
 </div>
 
