--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>AHS Capstone Final Exhibit</title>
-    <meta name="description" content="Hello, WebVR! • A-Frame">
+    {% include head.html %}
+    <link rel="stylesheet" href={{'/assets/css/aframe.css' | relative_url}} />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
     <!-- <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script> -->
     <script src="js/setup.js"></script>
   </head>
   <body>
-    <a-scene physics="debug: true" background="color: #FAFAFA">
-      <a-entity gltf-model="assets/DH.gltf" nav-mesh></a-entity>
-      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.3">
-        <a-camera position ="0 20 -2" look-controls="pointerLockEnabled: true">
+    {% assign sound_url = 'assets/background.mp3' | relative_url %}
+    <audio src={{sound_url}} loop autoplay></audio>
+    <a-scene background="color: #FAFAFA">
+      <!-- <a-entity gltf-model="assets/DH.gltf" nav-mesh></a-entity> -->
+      <!-- {% assign sound_src = 'src: url(' | append: sound_url | append: ')' %}
+      <a-sound src={{sound_src}} autoplay="true" position="0 1 -3" loop="true"></a-sound> -->
+      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.1">
+        <a-camera position ="0 0.2 -2" look-controls="pointerLockEnabled: true">
           <a-cursor></a-cursor>
        </a-camera>
       </a-entity>
@@ -22,6 +25,9 @@
       <a-cylinder dynamic-body position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
       <a-plane static-body text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
     </a-scene>
+    <div class="Page__splash">
+      <button class="Page__enter">ENTER</button>
+    </div>
   </body>
   <script src="js/main.js"></script>
 </html>
