--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="icon" href={{'favicon.ico' | relative_url }} type="image/x-icon"/>
+        {% include head.html %}
         <link rel="stylesheet" href={{'/assets/css/main.css' | relative_url}} />
-        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
-        <title>{{page.title}} - {{site.title}}</title>
     </head>
     <body>
         <div class="Page__wrapper">
