Adding new VR assets and styling.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <link rel="icon" href={{'favicon.ico' | relative_url }} type="image/x-icon"/>
 <link rel="stylesheet" href={{'/assets/css/font.css' | relative_url}} />
+<link rel="stylesheet" href={{'/assets/css/button.css' | relative_url}} />
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
 <title>{{page.title}} - {{site.title}}</title>
