Adding controls text

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -28,6 +28,9 @@
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
         <img src={{'assets/vr-title.png' | relative_url}} class="Exhibit__img" />
+        <h2 class="Exhibit__controls">
+        --> CONTROLS: WASD to move, mouse to look <--
+        </h2>
         <button class="Exhibit__link" id="enter">LOADING</button>
       </div>
     </div>
