--- a/assets/css/aframe.scss
+++ b/assets/css/aframe.scss
@@ -1,6 +1,10 @@
 ---
 ---
 
+h2 {
+    font-family: 'Terminal Grotesque', Helvetica, Arial, sans-serif;
+}
+
 .Exhibit__elements {
     display: flex;
     flex-direction: column;
@@ -22,4 +26,5 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 10000;
 }
