--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,24 @@
 ---
 ---
 
+@keyframes slide_in_left {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slide_in_right {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
 html, body {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
