Adding new content.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@ layout: default
     {% endif %}
 
     <div class={{wrapper_class}}>
-        <div class="Project__title">
-            <h3>{{project.title}} - {{project.author}}</h3>
+        <div class="Project__head">
+            <h3>{{project.author}} | <i class="Project__title">{{project.title}}</i> </h3>
             <div class="Project__button">
                 <img class="Project__spiral" src="assets/spiral.png" />
             </div>
