Adding under construction message.

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -31,6 +31,9 @@
         <h2 class="Exhibit__controls">
         --> CONTROLS: WASD to move, mouse to look <--
         </h2>
+        <h2 class="Exhibit__controls">
+        **UNDER CONSTRUCTION**
+        </h2>
         <button class="Exhibit__link" id="enter">LOADING</button>
       </div>
     </div>
