--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -16,14 +16,37 @@
       <!-- {% assign sound_src = 'src: url(' | append: sound_url | append: ')' %}
       <a-sound src={{sound_src}} autoplay="true" position="0 1 -3" loop="true"></a-sound> -->
       <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.1">
-        <a-camera position ="0 0.2 -2" look-controls="pointerLockEnabled: true">
+        <a-camera position ="0 0.5 -2" look-controls="pointerLockEnabled: true">
           <a-cursor></a-cursor>
        </a-camera>
       </a-entity>
-      <a-box dynamic-body prox="dist: 1.3; message: check out my project!" text-appear id="box" text="font: exo2bold; zOffset: 0.55; anchor: center; align: center" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
-      <a-sphere static-body position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder dynamic-body position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane static-body text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+      <a-box prox="dist: 1.3; message: check out my project!" 
+        height="0.45"
+        width="0.2"
+        depth="0.2"
+        text-appear 
+        id="box" 
+        text="font: exo2bold; zOffset: 0.55; anchor: center; align: center" 
+        position="-1 0.25 -3" 
+        rotation="0 45 0" 
+        color="#dddddd" 
+        shadow></a-box>
+
+      <a-box
+        height="0.1"
+        width="0.1"
+        depth="0.1"
+        color="#EF2D5E"
+        position="-1 .6 -3"
+        rotation="0 0 0"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"
+        animation__2="property: position; to: -1 .65 -3; loop: true; dir: alternate; easing: easeInOutQuad"
+        shadow
+      >
+      </a-box>
+      <a-sphere  position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-cylinder  position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+      <a-plane text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
     </a-scene>
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
