--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href={{'/assets/css/aframe.css' | relative_url}} />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <!-- <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script> -->
     <script src="js/setup.js"></script>
   </head>
@@ -15,38 +16,49 @@
       <!-- <a-entity gltf-model="assets/DH.gltf" nav-mesh></a-entity> -->
       <!-- {% assign sound_src = 'src: url(' | append: sound_url | append: ')' %}
       <a-sound src={{sound_src}} autoplay="true" position="0 1 -3" loop="true"></a-sound> -->
-      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.1">
-        <a-camera position ="0 0.5 -2" look-controls="pointerLockEnabled: true">
+      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.5">
+        <a-camera id="camera" position ="0 5 -20" look-controls="pointerLockEnabled: true">
           <a-cursor></a-cursor>
        </a-camera>
       </a-entity>
-      <a-box prox="dist: 1.3; message: check out my project!" 
-        height="0.45"
-        width="0.2"
-        depth="0.2"
+      <a-box 
+        proxlink="href: index.html"
+        height="4.5"
+        width="2"
+        depth="2"
         text-appear 
         id="box" 
-        text="font: exo2bold; zOffset: 0.55; anchor: center; align: center" 
-        position="-1 0.25 -3" 
+        position="-10 2.25 -30" 
         rotation="0 45 0" 
         color="#dddddd" 
         shadow></a-box>
 
       <a-box
-        height="0.1"
-        width="0.1"
-        depth="0.1"
+        height="1"
+        width="1"
+        depth="1"
         color="#EF2D5E"
-        position="-1 .6 -3"
+        position="-10 6 -30"
         rotation="0 0 0"
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"
-        animation__2="property: position; to: -1 .65 -3; loop: true; dir: alternate; easing: easeInOutQuad"
+        animation__2="property: position; to: -10 6.5 -30; loop: true; dir: alternate; easing: easeInOutQuad"
         shadow
-      >
-      </a-box>
-      <a-sphere  position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder  position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane text-appear position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+      ></a-box>
+      <a-entity 
+        proxlink="href: index.html"
+        look-at="#camera"
+        prox="dist: 20; message: check out my project!\n(click)" 
+        proxlink="href: index.html"
+        width="2.2" 
+        depth="2.2" 
+        height="10" 
+        position="-10 5 -30" 
+        rotation="0 45 0"
+        text="font: exo2bold; zOffset: 1.41; anchor: center; align: center; color: black" 
+        ></a-entity> 
+      <!-- <a-sphere  position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-cylinder  position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder> -->
+      <a-plane position="0 0 -40" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" shadow></a-plane>
     </a-scene>
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
