--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -18,7 +18,11 @@
       <a-sound src={{sound_src}} autoplay="true" position="0 1 -3" loop="true"></a-sound> -->
       <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.1">
         <a-camera id="camera" position ="0 0.5 -2" look-controls="pointerLockEnabled: true">
-          <a-cursor position="0 0 -0.1"></a-cursor>
+          <a-cursor 
+            position="0 0 -0.1"
+            geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
+            material="color: black; shader: flat"
+            ></a-cursor>
        </a-camera>
       </a-entity>
       <a-box 
