--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -6,24 +6,19 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://recast-api.donmccurdy.com/aframe-inspector-plugin-recast.js"></script>
     <!-- <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script> -->
     <script src="js/setup.js"></script>
   </head>
   <body>
     {% assign sound_url = 'assets/background.mp3' | relative_url %}
     <audio src={{sound_url}} loop preload="auto"></audio>
-    <a-scene background="color: #FAFAFA">
-      <!-- <a-entity gltf-model="assets/DH.gltf" nav-mesh></a-entity> -->
-      <!-- {% assign sound_src = 'src: url(' | append: sound_url | append: ')' %}
-      <a-sound src={{sound_src}} autoplay="true" position="0 1 -3" loop="true"></a-sound> -->
-      <a-entity id="rig" movement-controls="constrainToNavMesh: true; speed: 0.1">
-        <a-camera id="camera" position ="0 0.5 -2" look-controls="pointerLockEnabled: true">
-          <a-cursor 
-            position="0 0 -0.1"
-            geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
-            material="color: black; shader: flat"
-            ></a-cursor>
-       </a-camera>
+    <a-scene inspector-plugin-recast background="color: #FAFAFA">
+      <a-entity gltf-model="assets/navmesh.gltf" nav-mesh></a-entity>
+      <a-entity id="rig" position ="0 0 -2" movement-controls="constrainToNavMesh: false">
+        <a-camera id="camera" position="0 1.6 0" look-controls="pointerLockEnabled: true">
+          <a-cursor></a-cursor>
+        </a-camera>
       </a-entity>
       <a-box 
         height="0.45"
