--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -21,43 +21,40 @@
         </a-camera>
       </a-entity>
       <a-box 
-        height="0.45"
-        width="0.2"
-        depth="0.2"
+        height="4.5"
+        width="2"
+        depth="2"
         text-appear 
         id="box" 
-        text="font: exo2bold; zOffset: 0.55; anchor: center; align: center" 
-        position="-1 0.225 -3" 
+        position="-10 2.25 -30" 
         rotation="0 45 0" 
         color="#dddddd" 
         shadow></a-box>
-
       <a-box
-        proxlink="href: index.html; dist: 1.12"
-        height="0.1"
-        width="0.1"
-        depth="0.1"
+        proxlink="href: index.html; dist: 11.2"
+        height="1"
+        width="1"
+        depth="1"
         color="#EF2D5E"
-        position="-1 .6 -3"
+        position="-10 6 -30"
         rotation="0 0 0"
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"
-        animation__2="property: position; to: -1 .65 -3; loop: true; dir: alternate; easing: easeInOutQuad"
+        animation__2="property: position; to: -10 6.5 -30; loop: true; dir: alternate; easing: easeInOutQuad"
         shadow
       ></a-box>
       <a-entity 
         look-at="#camera"
-        prox="dist: 1.1; message: check out my project!\n(click)" 
-        width="0.22" 
-        depth="0.22" 
-        height="1" 
-        position="-1 .5 -3" 
+        prox="dist: 11; message: check out my project!\n(click)" 
+        width="2.2" 
+        depth="2.2" 
+        height="10" 
+        position="-10 5 -30" 
         rotation="0 45 0"
         text="font: exo2bold; zOffset: .141; anchor: center; align: center; color: black" 
 
         ></a-entity> 
-      <a-sphere  position="0 25.25 -2" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder  position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+      <a-cylinder  position="10 7.5 -30" radius="5" height="15" color="#FFC65D" shadow></a-cylinder>
+      <a-plane position="0 0 -40" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" shadow></a-plane>
     </a-scene>
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
