--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -14,47 +14,47 @@
     {% assign sound_url = 'assets/background.mp3' | relative_url %}
     <audio src={{sound_url}} loop preload="auto"></audio>
     <a-scene inspector-plugin-recast background="color: #FAFAFA">
-      <a-entity gltf-model="assets/navmesh.gltf" nav-mesh></a-entity>
-      <a-entity id="rig" position ="0 0 -20" movement-controls="constrainToNavMesh: false">
-        <a-camera id="camera" position="0 4.5 0" look-controls="pointerLockEnabled: true">
-          <a-cursor></a-cursor>
+      <a-entity gltf-model="assets/scene_navmesh.gltf" material="opacity: 0" nav-mesh></a-entity>
+      <a-entity id="rig" position ="0 0 0" movement-controls="constrainToNavMesh: true">
+        <a-camera id="camera" position="0 1.6 0" look-controls="pointerLockEnabled: true">
+          <a-cursor nav-debug-pointer raycaster="objects: [nav-mesh];"></a-cursor>
         </a-camera>
       </a-entity>
       <a-box 
-        height="4.5"
-        width="2"
-        depth="2"
+        height="1.5"
+        width=".6"
+        depth=".6"
         text-appear 
         id="box" 
-        position="-10 2.25 -30" 
+        position="3 .75 -3" 
         rotation="0 45 0" 
         color="#dddddd" 
         shadow></a-box>
       <a-box
-        proxlink="href: index.html; dist: 11.2"
-        height="1"
-        width="1"
-        depth="1"
+        proxlink="href: index.html; dist: 7"
+        height=".4"
+        width=".4"
+        depth=".4"
         color="#EF2D5E"
-        position="-10 6 -30"
+        position="3 1.8 -3"
         rotation="0 0 0"
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear"
-        animation__2="property: position; to: -10 6.5 -30; loop: true; dir: alternate; easing: easeInOutQuad"
+        animation__2="property: position; to: 3 2 -3; loop: true; dir: alternate; easing: easeInOutQuad"
         shadow
       ></a-box>
       <a-entity 
         look-at="#camera"
-        prox="dist: 11; message: check out my project!\n(click)" 
-        width="2.2" 
-        depth="2.2" 
-        height="10" 
-        position="-10 5 -30" 
+        prox="dist: 7; message: check out my project!\n(click)" 
+        width=".8" 
+        depth=".8" 
+        height="2.5" 
+        position="3 1.25 -3" 
         rotation="0 45 0"
-        text="font: exo2bold; zOffset: .141; anchor: center; align: center; color: black" 
+        text="width: 1.6; font: exo2bold; zOffset: .424; anchor: center; align: center; color: black" 
 
         ></a-entity> 
-      <a-cylinder  position="10 7.5 -30" radius="5" height="15" color="#FFC65D" shadow></a-cylinder>
-      <a-plane position="0 0 -40" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" shadow></a-plane>
+      <a-cylinder  position="-5 7.5 -12" radius="5" height="15" color="#FFC65D" shadow></a-cylinder>
+      <a-plane position="0 0 0" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" shadow></a-plane>
     </a-scene>
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
