Adding mouse hover cursor interaction.

--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -24,6 +24,7 @@
           <a-cursor nav-pointer
             position="0 0 -.5"
                     ></a-cursor>
+          <a-image id="click" width="0.1" height="0.1" position="0 0 -.49" src="assets/test-06.png" visible="false"></a-image>
         </a-entity>
       </a-entity>
       <a-entity gltf-model="assets/scene_navmesh.gltf" nav-mesh visible="false"></a-entity>
