--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -22,7 +22,7 @@
                   position="0 1.6 0"
                   look-controls="pointerLockEnabled: true">
           <a-cursor nav-pointer hover
-            raycaster="objects: .clickable; far: 2.15"
+            raycaster="objects: .clickable; far: .3"
             position="0 0 -.5"
                     ></a-cursor>
           <a-image id="click" width="0.034" height="0.046" position="-0.003 0.003 -.49" src="assets/cursor.png" visible="false"></a-image>
