--- a/_layouts/a-frame.html
+++ b/_layouts/a-frame.html
@@ -13,10 +13,10 @@
   <body>
     {% assign sound_url = 'assets/background.mp3' | relative_url %}
     <audio src={{sound_url}} loop preload="auto"></audio>
-    <a-scene inspector-plugin-recast background="color: #FAFAFA">
+    <a-scene inspector-plugin-recast background="color: #123456">
        <a-entity id="rig"
                 movement-controls="constrainToNavMesh: true"
-                position="0 0 5">
+                position="0 0 0">
         <a-entity id="camera"
                   camera
                   position="0 1.6 0"
@@ -30,8 +30,7 @@
       </a-entity>
       <a-entity gltf-model="assets/scene_navmesh.gltf" nav-mesh visible="false"></a-entity>
       {% include project-pedestals.html %}
-      <a-cylinder  position="-5 7.5 -12" radius="5" height="15" color="#FFC65D" shadow></a-cylinder>
-      <a-plane position="0 0 0" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" shadow></a-plane>
+      {% include scene.html %}
     </a-scene>
     <div class="Exhibit__splash" id="splash">
       <div class="Exhibit__elements">
